--- a/src/app/admin/component/nav/nav.component.html
+++ b/src/app/admin/component/nav/nav.component.html
@@ -6,16 +6,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['../quarries']" >Quarries </a>
+          <a class="nav-link" [routerLink]="['/home/quarries']" >Quarries </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Quarries</a>
+          <a class="nav-link"  >Contact Quarries</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Brands</a>
+          <a class="nav-link"  >Brands</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Services</a>
+          <a class="nav-link " >Services</a>
         </li>
       </ul>
     </div>
