--- a/src/app/admin/component/nav/nav.component.html
+++ b/src/app/admin/component/nav/nav.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['/home/quarries']" >Quarries </a>
+          <a class="nav-link" [routerLink]="['quarries']" >Quarries </a>
         </li>
         <li class="nav-item">
           <a class="nav-link"  >Contact Quarries</a>
